# variable_stranding

./: CMakeLists.txt  configure  main.cpp
include/: global.h  variable_stranding.h
src/: global.cpp  variable_stranding.cpp
