cmake_minimum_required(VERSION 3.10)
project(variable_stranding)
include_directories(./include)
aux_source_directory(./src DIR_SRCS)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
add_executable(variable_stranding main.cpp src/global.cpp include/global.h src/variable_stranding.cpp include/variable_stranding.h)